k8/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment
  labels:
    app: app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: app
        image: 691898168436.dkr.ecr.us-east-1.amazonaws.com/sre-challange-app:latest
        ports:
        - containerPort: 3000
