k8/service.yml
apiVersion: v1
kind: Service
metadata:
  name: app
spec:
  type: ClusterIP
  selector:
    app: app
  ports:    
    - port: 3000
      targetPort: 3000
